SERVER-48396 stop SIGUSR2 from killing connections

Add SA_RESTART to stacktrace_thread handler
    Restart asio::read and asio::write on EINTR